[gd_scene load_steps=33 format=2]

[ext_resource path="res://free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 1/Clouds 3/2.png" type="Texture" id=1]
[ext_resource path="res://Assets/LowGravityPowerF1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Arrow Keys.png" type="Texture" id=3]
[ext_resource path="res://kenney_fontpackage/Fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://kenney_fontpackage/Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/SpeedBoostPowerupFrames.png" type="Texture" id=6]
[ext_resource path="res://Assets/TripleJumpPowerF1.png" type="Texture" id=7]
[ext_resource path="res://uipack_fixed/PNG/blue_button02.png" type="Texture" id=8]
[ext_resource path="res://Sounds/2019-01-02_-_8_Bit_Menu_-_David_Renda_-_FesliyanStudios.com.mp3" type="AudioStream" id=9]
[ext_resource path="res://OptionMenu.gd" type="Script" id=10]
[ext_resource path="res://free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 1/Clouds 3/1.png" type="Texture" id=11]
[ext_resource path="res://free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 1/Clouds 3/4.png" type="Texture" id=12]
[ext_resource path="res://free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 1/Clouds 3/3.png" type="Texture" id=13]
[ext_resource path="res://Assets/SpaceBar.png" type="Texture" id=14]
[ext_resource path="res://Assets/SwitchRight.png" type="Texture" id=15]
[ext_resource path="res://Assets/SwitchLeft.png" type="Texture" id=16]
[ext_resource path="res://craftpix-675522-free-pixel-art-tiny-hero-sprites/2 Owlet_Monster/Owlet_Monster_Idle_4.png" type="Texture" id=17]
[ext_resource path="res://craftpix-675522-free-pixel-art-tiny-hero-sprites/3 Dude_Monster/Dude_Monster_Idle_4.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=2]
size = 17
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 17 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 17 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 17 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 18 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 18 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 18 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="OptionMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="Title" type="Label" parent="."]
margin_right = 320.0
margin_bottom = 27.0
custom_colors/font_color = Color( 1, 0.47451, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.180392, 0.141176, 0.141176, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "options"
align = 1

[node name="Controls" type="Node" parent="."]

[node name="Label2" type="Label" parent="Controls"]
margin_left = 70.0
margin_top = 41.0
margin_right = 131.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 3 )
text = "Down"

[node name="ArrowKeys" type="Sprite" parent="Controls/Label2"]
position = Vector2( -18, 7 )
scale = Vector2( 0.0671875, 0.0678572 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 216, 0, 207, 198 )

[node name="Label3" type="Label" parent="Controls"]
margin_left = 30.0
margin_top = 39.0
margin_right = 91.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 3 )
text = "Up "
valign = 1

[node name="ArrowKeys2" type="Sprite" parent="Controls/Label3"]
position = Vector2( 76, 10 )
scale = Vector2( 0.0671875, 0.0678572 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 216, 216, 207, 207 )

[node name="Label4" type="Label" parent="Controls"]
margin_left = 71.0
margin_top = 60.0
margin_right = 132.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 3 )
text = "Right"
valign = 1

[node name="ArrowKeys" type="Sprite" parent="Controls/Label4"]
position = Vector2( -18, 9 )
scale = Vector2( 0.0671875, 0.0678572 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 216, 207, 207 )

[node name="Label5" type="Label" parent="Controls"]
margin_left = 19.0
margin_top = 60.0
margin_right = 80.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 3 )
text = "Left"
valign = 1

[node name="Label6" type="Label" parent="Controls"]
margin_left = 17.0
margin_top = 83.0
margin_right = 80.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 3 )
text = "Double Jump"
valign = 1

[node name="ArrowKeys" type="Sprite" parent="Controls"]
position = Vector2( 92, 91 )
scale = Vector2( 0.0671875, 0.0678572 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 216, 0, 207, 198 )

[node name="ArrowKeys2" type="Sprite" parent="Controls"]
position = Vector2( 110, 91 )
scale = Vector2( 0.0671875, 0.0678572 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 216, 0, 207, 198 )

[node name="Label" type="Label" parent="Controls"]
margin_left = 43.0
margin_top = 27.0
margin_right = 104.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
text = "Controls"
align = 1

[node name="ArrowKeys3" type="Sprite" parent="Controls"]
position = Vector2( 106, 69 )
scale = Vector2( 0.0671875, 0.0678572 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 441, 216, 198, 207 )

[node name="Label7" type="Label" parent="Controls"]
margin_left = 20.0
margin_top = 99.0
margin_right = 81.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 3 )
text = "Shoot"
align = 1

[node name="Label8" type="Label" parent="Controls"]
margin_left = 266.0
margin_top = 2.0
margin_right = 327.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 3 )
text = "V 1.3 D"
align = 1

[node name="ArrowKeys4" type="Sprite" parent="Controls"]
position = Vector2( 88.8484, 106 )
scale = Vector2( 0.0967251, 0.095238 )
texture = ExtResource( 14 )
region_enabled = true
region_rect = Rect2( 0, 0, 396, 126 )

[node name="Powerups" type="Node" parent="."]

[node name="Label7" type="Label" parent="Powerups"]
margin_left = 214.0
margin_top = 27.0
margin_right = 275.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
text = "powerups"
align = 1

[node name="SpeedBoostText" type="Label" parent="Powerups"]
margin_left = 223.0
margin_top = 45.0
margin_right = 285.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 3 )
text = "speed boost"
align = 1
valign = 1

[node name="SpeedBoostIcon" type="Sprite" parent="Powerups"]
position = Vector2( 205, 54 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 17 )

[node name="LowGravityText" type="Label" parent="Powerups"]
margin_left = 223.0
margin_top = 63.0
margin_right = 285.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 3 )
text = "low gravity"
align = 1
valign = 1

[node name="LowGravotyIcon" type="Sprite" parent="Powerups"]
position = Vector2( 205, 72 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 199, 127, 16, 16 )

[node name="TripleJumpText" type="Label" parent="Powerups"]
margin_left = 223.0
margin_top = 81.0
margin_right = 285.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 3 )
text = "triple jump"
align = 1
valign = 1

[node name="TripleJumpIcon" type="Sprite" parent="Powerups"]
position = Vector2( 205, 90 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, 1, 17, 16 )

[node name="Info" type="Node" parent="."]

[node name="InfoBody" type="Label" parent="Info"]
margin_left = 18.0
margin_top = 126.0
margin_right = 226.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 3 )
text = "Questor is a 2d retro platformer. You
must maneuver your way through challenging 
levels and face difficult enemies!"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Back Button" type="Button" parent="."]
margin_left = 262.0
margin_top = 152.0
margin_right = 309.0
margin_bottom = 172.0
focus_neighbour_bottom = NodePath("../HBoxContainer/StartButton")
flat = true

[node name="ButtonSkin" type="Sprite" parent="Back Button"]
position = Vector2( 23.3885, 10.4737 )
rotation = -0.00112901
scale = Vector2( 0.260417, 0.460595 )
z_index = -1
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Back Button"]
margin_left = -7.0
margin_top = -4.0
margin_right = 56.0
margin_bottom = 21.0
custom_colors/font_color = Color( 1, 0.47451, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Back"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.137
autoplay = true

[node name="BackGround" type="Node2D" parent="."]
position = Vector2( 160, 99 )

[node name="Sprite" type="Sprite" parent="BackGround"]
position = Vector2( 1, -9 )
scale = Vector2( 0.5625, 0.555556 )
z_index = -20
texture = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="BackGround"]
position = Vector2( 5, -9 )
scale = Vector2( 0.5625, 0.555556 )
z_index = -20
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="BackGround"]
position = Vector2( 0, -8 )
scale = Vector2( 0.5625, 0.555556 )
z_index = -20
texture = ExtResource( 13 )

[node name="Sprite4" type="Sprite" parent="BackGround"]
position = Vector2( 0, -10 )
scale = Vector2( 0.5625, 0.555556 )
z_index = -20
texture = ExtResource( 12 )

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 135.0
margin_top = 27.0
margin_right = 175.0
margin_bottom = 67.0
custom_icons/checked = ExtResource( 15 )
custom_icons/unchecked = ExtResource( 16 )
custom_styles/focus = SubResource( 5 )
pressed = true

[node name="Label9" type="Label" parent="."]
margin_left = 125.0
margin_top = 69.0
margin_right = 186.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 3 )
text = "Player"
align = 1

[node name="OwletSprite" type="AnimatedSprite" parent="."]
position = Vector2( 155, 108 )
frames = SubResource( 10 )
frame = 2
playing = true

[node name="ColorRect" type="ColorRect" parent="OwletSprite"]
margin_left = -6.0
margin_top = 16.0
margin_right = -3.0
margin_bottom = 17.0
color = Color( 0.164706, 0.188235, 0.305882, 1 )

[node name="ColorRect2" type="ColorRect" parent="OwletSprite"]
margin_top = 16.0
margin_right = 3.0
margin_bottom = 17.0
color = Color( 0.164706, 0.188235, 0.305882, 1 )

[node name="BlueSprite" type="AnimatedSprite" parent="."]
position = Vector2( 155, 108 )
frames = SubResource( 15 )
playing = true

[node name="ColorRect" type="ColorRect" parent="BlueSprite"]
margin_left = -6.0
margin_top = 16.0
margin_right = -3.0
margin_bottom = 17.0
color = Color( 0.0156863, 0.0980392, 0.247059, 1 )

[node name="ColorRect2" type="ColorRect" parent="BlueSprite"]
margin_top = 16.0
margin_right = 3.0
margin_bottom = 17.0
color = Color( 0.0156863, 0.0980392, 0.247059, 1 )

[connection signal="pressed" from="Back Button" to="." method="_on_Back_Button_pressed"]
[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
